src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A36.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A36 {
  class A;
 
  association A -- B;
  association C -- A;
}
